--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,27 +12,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyFilterPorject"
         tools:targetApi="31">
-        <activity
-            android:name=".ResetScreen"
-            android:exported="false" />
-        <activity
-            android:name=".SignUpScreen"
-            android:exported="false" />
-        <activity
-            android:name=".LoginScreen"
-            android:exported="false" />
+
         <activity
             android:name=".SplashScreen"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".ResetScreen"
+            android:exported="false" />
+
+        <activity
+            android:name=".SignUpScreen"
+            android:exported="false" />
+
+        <activity
+            android:name=".LoginScreen"
+            android:exported="false" />
+
+    </application>
 </manifest>
