--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -21,6 +23,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyFilterPorject"
         tools:targetApi="31">
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+
         <activity
             android:name=".OpenCameraActivity"
             android:exported="false" />
@@ -57,6 +71,9 @@
         <activity
             android:name=".SignUpScreen"
             android:exported="false" />
+
+
+
     </application>
 
 </manifest>
